kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibindex
  namespace: ibindex
spec:
  selector:
    app: ibindex
  ports:
    - port: 80
      targetPort: 8501
